--- a/selab/contact/index.html
+++ b/selab/contact/index.html
@@ -1,53 +1,24 @@
 <!DOCTYPE html>
-<!-- saved from url=(0036)https://selab.hanyang.ac.kr/contact/ -->
-<html class="gr__selab_hanyang_ac_kr">
+<html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<style>.dismissButton{background-color:#fff;border:1px solid #dadce0;color:#1a73e8;border-radius:4px;font-family:Roboto,sans-serif;font-size:14px;height:36px;cursor:pointer;padding:0 24px}.dismissButton:hover{background-color:rgba(66,133,244,0.04);border:1px solid #d2e3fc}.dismissButton:focus{background-color:rgba(66,133,244,0.12);border:1px solid #d2e3fc;outline:0}.dismissButton:hover:focus{background-color:rgba(66,133,244,0.16);border:1px solid #d2e2fd}.dismissButton:active{background-color:rgba(66,133,244,0.16);border:1px solid #d2e2fd;box-shadow:0 1px 2px 0 rgba(60,64,67,0.3),0 1px 3px 1px rgba(60,64,67,0.15)}.dismissButton:disabled{background-color:#fff;border:1px solid #f1f3f4;color:#3c4043}</style>
-		<style>.gm-style .gm-style-mtc label,.gm-style .gm-style-mtc div{font-weight:400}</style>
-		<style>.gm-control-active>img{box-sizing:content-box;display:none;left:50%;pointer-events:none;position:absolute;top:50%;transform:translate(-50%,-50%)}.gm-control-active>img:nth-child(1){display:block}.gm-control-active:hover>img:nth-child(1),.gm-control-active:active>img:nth-child(1){display:none}.gm-control-active:hover>img:nth-child(2),.gm-control-active:active>img:nth-child(3){display:block}</style>
-		<link type="text/css" rel="stylesheet" href="./index_files/css">
-		<style>.gm-ui-hover-effect{opacity:.6}.gm-ui-hover-effect:hover{opacity:1}</style>
-		<style>.gm-style .gm-style-cc span,.gm-style .gm-style-cc a,.gm-style .gm-style-mtc div{font-size:10px;box-sizing:border-box}</style>
-		<style>@media print {  .gm-style .gmnoprint, .gmnoprint {    display:none  }}@media screen {  .gm-style .gmnoscreen, .gmnoscreen {    display:none  }}</style>
-		<style>.gm-style-pbc{transition:opacity ease-in-out;background-color:rgba(0,0,0,0.45);text-align:center}.gm-style-pbt{font-size:22px;color:white;font-family:Roboto,Arial,sans-serif;position:relative;margin:0;top:50%;-webkit-transform:translateY(-50%);-ms-transform:translateY(-50%);transform:translateY(-50%)}</style>
-		<style>.gm-style img{max-width: none;}.gm-style {font: 400 11px Roboto, Arial, sans-serif; text-decoration: none;}</style>
-
+		<meta charset="utf-8" />
 		<title>Software Engineering Lab - Contact</title>
 		<!--[if IE]>
 		<script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-		<link rel="stylesheet" href="./index_files/bootstrap.min.css" type="text/css">
-		<link rel="stylesheet" href="./index_files/reset-1.6.1.css" type="text/css">
-		<link rel="stylesheet" href="./index_files/jquery-ui.css" type="text/css">
-		<link rel="stylesheet" href="./index_files/font-awesome.min.css" type="text/css">
-		<link rel="stylesheet" href="./index_files/common.css" type="text/css">
-		<link rel="shortcut icon" href="common/images/SelabFavicon.png" type="image/png">
-		<link rel="stylesheet" href="./index_files/contact.css" type="text/css">
+		<link rel="stylesheet" href="../common/styles/reset-1.6.1.css" type="text/css" />
+		<link rel="stylesheet" href="../common/styles/jquery-ui.css" type="text/css" />
+		<link rel="stylesheet" href="../common/styles/font-awesome-4.0.3/css/font-awesome.min.css" type="text/css" />
+		<link rel="stylesheet" href="../common/styles/common.css" type="text/css" />
+		<link rel="shortcut icon" href="../common/images/SelabFavicon.png" type="image/png">
+		<link rel="stylesheet" href="styles/contact.css" type="text/css">
 
-		<script type="text/javascript" src="./index_files/jquery-1.11.0.min.js"></script>
-		<script type="text/javascript" src="./index_files/jquery-ui.js"></script>
-		<script type="text/javascript" src="./index_files/buffered-keyup.js"></script>
-		<script type="text/javascript" src="./index_files/common.js"></script>
-		<script type="text/javascript" src="./index_files/js"></script>
-		<script type="text/javascript" src="./index_files/contact.js"></script>
-
-		<script type="text/javascript" charset="UTF-8" src="./index_files/common(1).js"></script>
-		<script type="text/javascript" charset="UTF-8" src="./index_files/util.js"></script>
-		<script type="text/javascript" charset="UTF-8" src="./index_files/map.js"></script>
-		<script type="text/javascript" charset="UTF-8" src="./index_files/marker.js"></script>
-		<script type="text/javascript" charset="UTF-8" src="./index_files/onion.js"></script>
-		<script type="text/javascript" charset="UTF-8" src="./index_files/ViewportInfoService.GetViewportInfo"></script>
-		<style type="text/css">@-webkit-keyframes _gm9522 {
-			0% { -webkit-transform: translate3d(0px,0px,0); -webkit-animation-timing-function: ease-out; }
-			50% { -webkit-transform: translate3d(0px,-20px,0); -webkit-animation-timing-function: ease-in; }
-			100% { -webkit-transform: translate3d(0px,0px,0); -webkit-animation-timing-function: ease-out; }
-		}</style>
-		<script type="text/javascript" charset="UTF-8" src="./index_files/f.txt"></script>
-		<script type="text/javascript" charset="UTF-8" src="./index_files/controls.js"></script>
-		<script type="text/javascript" charset="UTF-8" src="./index_files/AuthenticationService.Authenticate"></script>
-		<script type="text/javascript" charset="UTF-8" src="./index_files/QuotaService.RecordEvent"></script>
-		<script type="text/javascript" charset="UTF-8" src="./index_files/f(1).txt"></script>
+		<script type="text/javascript" src="common/scripts/jquery-1.11.0.min.js"></script>
+		<script type="text/javascript" src="common/scripts/jquery-ui.js"></script>
+		<script type="text/javascript" src="common/scripts/buffered-keyup.js"></script>
+		<script type="text/javascript" src="common/scripts/common.js"></script>
+		<script type="text/javascript" src="scripts/js"></script>
+		<script type="text/javascript" src="scripts/index_files/contact.js"></script>
 	</head>
 
 	<body data-gr-c-s-loaded="true" style="">
