--- a/selab/courses/index.html
+++ b/selab/courses/index.html
@@ -30,9 +30,9 @@
 					<ul id="menu" class="inline-list pull-left">
 						<li class="pull-left"><a href="../notice/index.html" >NOTICE</a></li>
 						<li class="pull-left"><a href="../members/index.html" >MEMBERS</a></li>
-						<li class="pull-left"><a href="../research/index.html"class="selected" >RESEARCH</a></li>
+						<li class="pull-left"><a href="../research/index.html" >RESEARCH</a></li>
 						<li class="pull-left"><a href="../publications/index.html" >PUBLICATIONS</a></li>
-						<li class="pull-left"><a href="../courses/index.html" >COURSES</a></li>
+						<li class="pull-left"><a href="../courses/index.html" class="selected">COURSES</a></li>
 						<li class="pull-left"><a href="../gallery/index.html" >GALLERY</a></li>
 					</ul>
 					<div role="login" class="pull-right">
