--- a/selab/index.html
+++ b/selab/index.html
@@ -9,21 +9,21 @@
 	<!--[if IE]>
 	<script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-	<link rel="stylesheet" href="../maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" type="text/css" />
-	<link rel="stylesheet" href="common/styles/reset-1.6.1.css" type="text/css" />
+
+	<link rel="stylesheet" href="common/styles/reset-1.6.1.css" type="text/css" /> <!--header, images size -->
 	<link rel="stylesheet" href="common/styles/jquery-ui.css" type="text/css" />
-	<link rel="stylesheet" href="common/styles/font-awesome-4.0.3/css/font-awesome.min.css" type="text/css" />
-	<link rel="stylesheet" href="common/styles/common.css" type="text/css" />
+	<link rel="stylesheet" href="../common/styles/font-awesome-4.0.3/css/font-awesome.min.css" type="text/css" />
+	<link rel="stylesheet" href="common/styles/common.css" type="text/css" /> <!--header-->
 	<link rel="shortcut icon" href="common/images/SelabFavicon.png" type="image/png">
-			<link rel="stylesheet" href="home/styles/home.css" type="text/css" />
-		
+	<link rel="stylesheet" href="home/styles/home.css" type="text/css" />
+
 	<script type="text/javascript" src="common/scripts/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="common/scripts/jquery-ui.js"></script>
 	<script type="text/javascript" src="common/scripts/buffered-keyup.js"></script>
 	<script type="text/javascript" src="common/scripts/common.js"></script>
-			<script type="text/javascript" src="home/scripts/home.js"></script>
-				<script type="text/javascript" src="home/scripts/unslider.js"></script>
-		
+	<script type="text/javascript" src="home/scripts/home.js"></script>
+	<script type="text/javascript" src="home/scripts/unslider.js"></script>
+
 </head>
 
 <body>
@@ -38,10 +38,10 @@
 					<li class="pull-left"><a href="publications/index.html" >PUBLICATIONS</a></li>
 					<li class="pull-left"><a href="courses/index.html" >COURSES</a></li>
 					<li class="pull-left"><a href="gallery/index.html" >GALLERY</a></li>
-									</ul>
-							<div role="login" class="pull-right">
-											<a href="login/index4e7d.html?source=/index.php">LOGIN</a>            
-										</div>
+				</ul>
+				<div role="login" class="pull-right">
+					<a href="login/index4e7d.html?source=/index.php">LOGIN</a>
+				</div>
 				<a id="contact" href="contact/index.html" class='pull-right'>CONTACT</a>
 			</nav>
 		</div>
@@ -51,24 +51,25 @@
 		<div class="container">
 			<div class="contents">
 				<div class="banner">
-	<ul>
-		<li id="img1"></li>
-		<li id="img2"></li>
-		<li id="img3"></li>
-	</ul>
-</div>
-<div id="notices" class="pull-left">
-	<h2><a href="notice/index-2.html">NOTICE</a><a href="notice/rss.php"><i class="fa fa-rss-square"></i></a></h2>
-	<ul id="board">
-	</ul>
-</div>
-<div id="courses" class="pull-left">
-	<h2>COURSES</h2>
-	<ul>
-		<li><a href="courses/cse326/2019/index.html">CSE326 Web Application Development</a></li>
-		<li><a href="courses/cse6050/2019/index.html">CSE6050 Advanced Software Engineering</a></li>
-	</ul>
-</div>
+					<ul>
+						<li id="img1"></li>
+						<li id="img2"></li>
+						<li id="img3"></li>
+					</ul>
+				</div>
+				<div id="notices" class="pull-left">
+					<h2><a href="notice/index.html">NOTICE</a></h2>
+					<ul id="board">
+						<!-- 여기에 notice내용 추가 필요  -->
+					</ul>
+				</div>
+				<div id="courses" class="pull-left">
+					<h2>COURSES</h2>
+					<ul>
+						<li><a href="courses/cse326/2019/index.html">CSE326 Web Application Development</a></li>
+						<!-- <li><a href="courses/cse6050/2019/index.html">CSE6050 Advanced Software Engineering</a></li> -->
+					</ul>
+				</div>
 			</div>
 		</div>
 	</main>
