--- a/selab/publications/index.html
+++ b/selab/publications/index.html
@@ -1,39 +1,37 @@
 <!DOCTYPE html>
-<!-- saved from url=(0041)https://selab.hanyang.ac.kr/publications/ -->
-<html class="gr__selab_hanyang_ac_kr">
+<html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<meta charset="utf-8" />
 
 		<title>Software Engineering Lab - Publications</title>
 		<!--[if IE]>
 		<script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-		<link rel="stylesheet" href="./index_files/bootstrap.min.css" type="text/css">
-		<link rel="stylesheet" href="./index_files/reset-1.6.1.css" type="text/css">
-		<link rel="stylesheet" href="./index_files/jquery-ui.css" type="text/css">
-		<link rel="stylesheet" href="./index_files/font-awesome.min.css" type="text/css">
-		<link rel="stylesheet" href="./index_files/common.css" type="text/css">
+		<link rel="stylesheet" href="../common/styles/reset-1.6.1.css" type="text/css" /> <!--header, images size -->
+		<link rel="stylesheet" href="../common/styles/jquery-ui.css" type="text/css" />
+		<link rel="stylesheet" href="../common/styles/font-awesome-4.0.3/css/font-awesome.min.css" type="text/css" />
+		<link rel="stylesheet" href="../common/styles/common.css" type="text/css" /> <!--header-->
 		<link rel="shortcut icon" href="../common/images/SelabFavicon.png" type="image/png">
-		<link rel="stylesheet" href="./index_files/publications.css" type="text/css">
+		<link rel="stylesheet" href="styles/publications.css" type="text/css" />
 
-		<script type="text/javascript" src="./index_files/jquery-1.11.0.min.js"></script>
-		<script type="text/javascript" src="./index_files/jquery-ui.js"></script>
-		<script type="text/javascript" src="./index_files/buffered-keyup.js"></script>
-		<script type="text/javascript" src="./index_files/common.js"></script>
-		<script type="text/javascript" src="./index_files/publications.js"></script>
+		<script type="text/javascript" src="../common/scripts/jquery-1.11.0.min.js"></script>
+		<script type="text/javascript" src="../common/scripts/jquery-ui.js"></script>
+		<script type="text/javascript" src="../common/scripts/buffered-keyup.js"></script>
+		<script type="text/javascript" src="../common/scripts/common.js"></script>
+		<script type="text/javascript" src="scripts/publications.js"></script>
 
 	</head>
 
-	<body data-gr-c-s-loaded="true" style="">
+	<body>
 		<header role="banner">
 			<div class="container">
 				<nav role="navigation">
 					<div id="logo" class="pull-left"><a href="../index.html"><img src="../common/images/selab_logo_S.png" /></a></div>
 					<ul id="menu" class="inline-list pull-left">
-						<li class="pull-left"><a href="../notice/index.html" class='selected'>NOTICE</a></li>
+						<li class="pull-left"><a href="../notice/index.html" >NOTICE</a></li>
 						<li class="pull-left"><a href="../members/index.html" >MEMBERS</a></li>
 						<li class="pull-left"><a href="../research/index.html" >RESEARCH</a></li>
-						<li class="pull-left"><a href="../publications/index.html" >PUBLICATIONS</a></li>
+						<li class="pull-left"><a href="../publications/index.html" class='selected'>PUBLICATIONS</a></li>
 						<li class="pull-left"><a href="../courses/index.html" >COURSES</a></li>
 						<li class="pull-left"><a href="../gallery/index.html" >GALLERY</a></li>
 					</ul>
@@ -127,7 +125,7 @@
 								<tr data-href="papers/../papers/International_Journal/[IJ]_Zhiqiang0.pdf">
 									<td>Zhiqiang Wu, Asad Abbas, Xin Chen and Scott Uk-Jin Lee, "Classification of concurrent anomalies for iot software based support vector machine," J. Journal of Theoretical and Applied Information Technology, vol. 95, no. 3, pp. 832-842, Feb. 2018.</td>
 								</tr>
-	``						<tr data-href="papers/../papers/International_Journal/[IJ]_Isma3.pdf">
+								<tr data-href="papers/../papers/International_Journal/[IJ]_Isma3.pdf">
 									<td>Isma Farah Siddiqui, Scott Uk-Jin Lee, Asad Abbas and Ali Kashif Bashir, "Optimizing Lifespan and Energy Consumption by Smart Meters in Green-Cloud-Based Smart Grids," J. IEEE Access, vol. 5, pp. 20934-220945,  . 2017.</td>
 								</tr>
 								<tr data-href="papers/../papers/International_Journal/[IJ]_Isma2.pdf">
