--- a/selab/members/index.html
+++ b/selab/members/index.html
@@ -8,18 +8,17 @@
 		<!--[if IE]>
 		<script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-		<link rel="stylesheet" href="./index_files/bootstrap.min.css" type="text/css">
-		<link rel="stylesheet" href="./index_files/reset-1.6.1.css" type="text/css">
-		<link rel="stylesheet" href="./index_files/jquery-ui.css" type="text/css">
-		<link rel="stylesheet" href="./index_files/font-awesome.min.css" type="text/css">
-		<link rel="stylesheet" href="./index_files/common.css" type="text/css">
-		<link rel="shortcut icon" href="common/images/SelabFavicon.png" type="image/png">
-		<link rel="stylesheet" href="./index_files/members.css" type="text/css">
+		<link rel="stylesheet" href="../common/styles/reset-1.6.1.css" type="text/css" />
+		<link rel="stylesheet" href="../common/styles/jquery-ui.css" type="text/css" />
+		<link rel="stylesheet" href="../common/styles/font-awesome-4.0.3/css/font-awesome.min.css" type="text/css" />
+		<link rel="stylesheet" href="../common/styles/common.css" type="text/css" />
+		<link rel="shortcut icon" href="../common/images/SelabFavicon.png" type="image/png">
+		<link rel="stylesheet" href="styles/members.css" type="text/css" />
 
-		<script type="text/javascript" src="./index_files/jquery-1.11.0.min.js"></script>
-		<script type="text/javascript" src="./index_files/jquery-ui.js"></script>
-		<script type="text/javascript" src="./index_files/buffered-keyup.js"></script>
-		<script type="text/javascript" src="./index_files/common.js"></script>
+		<script type="text/javascript" src="../common/scripts/jquery-1.11.0.min.js"></script>
+		<script type="text/javascript" src="../common/scripts/jquery-ui.js"></script>
+		<script type="text/javascript" src="../common/scripts/buffered-keyup.js"></script>
+		<script type="text/javascript" src="../common/scripts/common.js"></script>
 
 	</head>
 
@@ -30,7 +29,7 @@
 					<div id="logo" class="pull-left"><a href="../index.html"><img src="../common/images/selab_logo_S.png" /></a></div>
 					<ul id="menu" class="inline-list pull-left">
 						<li class="pull-left"><a href="../notice/index.html" >NOTICE</a></li>
-						<li class="pull-left"><a href="../members/index.html" >MEMBERS</a></li>
+						<li class="pull-left"><a href="../members/index.html" class='selected'>MEMBERS</a></li>
 						<li class="pull-left"><a href="../research/index.html" >RESEARCH</a></li>
 						<li class="pull-left"><a href="../publications/index.html" >PUBLICATIONS</a></li>
 						<li class="pull-left"><a href="../courses/index.html" >COURSES</a></li>
