--- a/selab/courses/index.html
+++ b/selab/courses/index.html
@@ -65,8 +65,8 @@
 								<td class="course">Web Programming</td>
 							</tr>
 							<tr>
-								<td class="coursnum active"><a href="cse326/2019/index.html">CSE326</a></td>
-								<td class="course active"><a href="cse326/2019/index.html">
+								<td class="coursnum active"><a href="./cse326/2019/index.html">CSE326</a></td>
+								<td class="course active"><a href="./cse326/2019/index.html">
 								Web Application Development</a></td>
 							</tr>
 							<tr>
