--- a/selab/index.html
+++ b/selab/index.html
@@ -10,10 +10,10 @@
 	<script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 
-	<link rel="stylesheet" href="common/styles/reset-1.6.1.css" type="text/css" /> <!--header, images size -->
+	<link rel="stylesheet" href="common/styles/reset-1.6.1.css" type="text/css" />
 	<link rel="stylesheet" href="common/styles/jquery-ui.css" type="text/css" />
 	<link rel="stylesheet" href="../common/styles/font-awesome-4.0.3/css/font-awesome.min.css" type="text/css" />
-	<link rel="stylesheet" href="common/styles/common.css" type="text/css" /> <!--header-->
+	<link rel="stylesheet" href="common/styles/common.css" type="text/css" />
 	<link rel="shortcut icon" href="common/images/SelabFavicon.png" type="image/png">
 	<link rel="stylesheet" href="home/styles/home.css" type="text/css" />
 
@@ -31,14 +31,14 @@
 		<div class="container">
 			<nav role="navigation">
 				<div id="logo" class="pull-left"><a href="index.html"><img src="common/images/selab_logo_S.png" /></a></div>
-				<ul id="menu" class="inline-list pull-left">
+				<!-- <ul id="menu" class="inline-list pull-left">
 					<li class="pull-left"><a href="notice/index.html" >NOTICE</a></li>
 					<li class="pull-left"><a href="members/index.html" >MEMBERS</a></li>
 					<li class="pull-left"><a href="research/index.html" >RESEARCH</a></li>
 					<li class="pull-left"><a href="publications/index.html" >PUBLICATIONS</a></li>
 					<li class="pull-left"><a href="courses/index.html" >COURSES</a></li>
 					<li class="pull-left"><a href="gallery/index.html" >GALLERY</a></li>
-				</ul>
+				</ul> -->
 				<div role="login" class="pull-right">
 					<a href="login/index4e7d.html?source=/index.php">LOGIN</a>
 				</div>
@@ -49,29 +49,38 @@
 
 	<main role="main">
 		<div class="container">
-			<div class="contents">
-				<div class="banner">
+			<!-- <div class="contents"> -->
+				<!-- <div class="banner">
 					<ul>
 						<li id="img1"></li>
 						<li id="img2"></li>
 						<li id="img3"></li>
 					</ul>
-				</div>
-				<div id="notices" class="pull-left">
+				</div> -->
+				<!-- <div id="notices" class="pull-left">
 					<h2><a href="notice/index.html">NOTICE</a></h2>
 					<ul id="board">
-						<!-- 여기에 notice내용 추가 필요  -->
 					</ul>
 				</div>
 				<div id="courses" class="pull-left">
 					<h2>COURSES</h2>
 					<ul>
 						<li><a href="courses/cse326/2019/index.html">CSE326 Web Application Development</a></li>
-						<!-- <li><a href="courses/cse6050/2019/index.html">CSE6050 Advanced Software Engineering</a></li> -->
 					</ul>
-				</div>
-			</div>
+				</div> -->
+      <div class="menu">
+				<div><a href="index.html"><img src="common/images/selab_logo_S.png" /></a></div>
+        <a href="notice/index.html">NOTICE</a>
+				<a href="members/index.html">MEMBERS</a>
+				<a href="research/index.html" >RESEARCH</a>
+  			<a href="publications/index.html" >PUBLICATIONS</a>
+  			<a href="courses/index.html" >COURSES</a>
+  			<a href="gallery/index.html" >GALLERY</a>
+      </div>
+			<!-- </div> -->
 		</div>
+		<button onclick="changeWidth()">Try it</button>
+		<p id="demo"></p>
 	</main>
 
 	<footer role="contentinfo">
