--- a/selab/index.html
+++ b/selab/index.html
@@ -39,6 +39,32 @@
 					<li class="pull-left"><a href="courses/index.html" >COURSES</a></li>
 					<li class="pull-left"><a href="gallery/index.html" >GALLERY</a></li>
 				</ul> -->
+				<div id="setting" href"" class='pull-right'>
+					<input type="button" class="setting" value="SETTING" onclick="settingShow()" />
+					<div class="setting-tab">
+						<input type="button" value="close" onclick="settingClose()" />
+						<p>Navigation</p>
+						<input type="radio" name="nav" value="top" checked="checked" /> Top
+						<input type="radio" name="nav" value="left" /> Left
+						<input type="radio" name="nav" value="right" /> Right
+						<p>Font</p>
+						<select id="fontselect" name="selectFontFamily" onchange="fontupdate(1);">
+					  <option style="font-family:Serif" value="serif"> Serif </option><option style="font-family:Tahoma" value="Tahoma"> Tahoma </option>
+					  <option style="font-family:Arial" value="Arial"> Arial </option><option style="font-family:Monospace" value="Monospace">Monospace</option>
+					  <option style="font-family:Roboto" value="Roboto">Roboto</option><option style="font-family:Times New Roman" value="Times New Roman">Times New Roman</option>
+					  <option style="font-family:Garamond" value="Garamond">Garamond</option><option style="font-family:Comic Sans MS" value="Comic Sans MS">Comic Sans MS</option>
+					  <option style="font-family:Courier" value="Courier">Courier</option><option style="font-family:Impact" value="Impact">Impact</otpion></select>
+					  <p>Font Size</p>
+					  <select id="fontsizeSlect" name="selectfontsize" onchange="fontupdate(2);">
+					  <option>10pt</option><option>12pt</option><option>14pt</option><option>16pt</option><option>18pt</option>
+					  <option>20pt</option><option>22pt</option><option>24pt</option><option>26pt</option><option>28pt</option>
+					  <option>30pt</option></select>
+					  <p>Title Color</p>
+					  <input type="text" id="custom" />
+					  <p>Contents Color</p>
+					  <input type="text" id="custom1" />
+					</div>
+				</div>
 				<div role="login" class="pull-right">
 					<a href="login/index4e7d.html?source=/index.php">LOGIN</a>
 				</div>
@@ -79,8 +105,6 @@
       </div>
 			<!-- </div> -->
 		</div>
-		<button onclick="changeWidth()">Try it</button>
-		<p id="demo"></p>
 	</main>
 
 	<footer role="contentinfo">
