--- a/selab/index.html
+++ b/selab/index.html
@@ -10,12 +10,13 @@
 	<script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 
-	<link rel="stylesheet" href="common/styles/reset-1.6.1.css" type="text/css" />
-	<link rel="stylesheet" href="common/styles/jquery-ui.css" type="text/css" />
-	<link rel="stylesheet" href="../common/styles/font-awesome-4.0.3/css/font-awesome.min.css" type="text/css" />
+	<!-- <link rel="stylesheet" href="common/styles/reset-1.6.1.css" type="text/css" /> -->
+	<!-- <link rel="stylesheet" href="common/styles/jquery-ui.css" type="text/css" /> -->
+	<!-- <link rel="stylesheet" href="../common/styles/font-awesome-4.0.3/css/font-awesome.min.css" type="text/css" /> -->
 	<link rel="stylesheet" href="common/styles/common.css" type="text/css" />
 	<link rel="shortcut icon" href="common/images/SelabFavicon.png" type="image/png">
 	<link rel="stylesheet" href="home/styles/home.css" type="text/css" />
+	<link rel="stylesheet" href="home/styles/theme1.css" type="text/css" />
 
 	<script type="text/javascript" src="common/scripts/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="common/scripts/jquery-ui.js"></script>
@@ -69,13 +70,13 @@
 					</ul>
 				</div> -->
       <div class="menu">
-				<div><a href="index.html"><img src="common/images/selab_logo_S.png" /></a></div>
-        <a href="notice/index.html">NOTICE</a>
-				<a href="members/index.html">MEMBERS</a>
-				<a href="research/index.html" >RESEARCH</a>
-  			<a href="publications/index.html" >PUBLICATIONS</a>
-  			<a href="courses/index.html" >COURSES</a>
-  			<a href="gallery/index.html" >GALLERY</a>
+				<div id = 'ind'><a href="index.html"><img src="common/images/selab_logo_S_2.png" /></a></div>
+        <a id='not' href="notice/index.html">NOTICE</a>
+				<a id='mem' href="members/index.html">MEMBERS</a>
+				<a id='res' href="research/index.html" >RESEARCH</a>
+  			<a id='pub' href="publications/index.html" >PUBLICATIONS</a>
+  			<a id='cou' href="courses/index.html" >COURSES</a>
+  			<a id='gal' href="gallery/index.html" >GALLERY</a>
       </div>
 			<!-- </div> -->
 		</div>
