--- a/selab/login/index4e7d.html
+++ b/selab/login/index4e7d.html
@@ -2,8 +2,7 @@
 <!DOCTYPE html>
 <html>
 
-<!-- Mirrored from selab.hanyang.ac.kr/login/index.php?source=/index.php by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 01 Nov 2019 07:38:25 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
 	<link rel="stylesheet" type="text/css" href="style/login.css"/>
 	<script src="../common/scripts/jquery-1.10.2.js" type="text/javascript"></script>
@@ -16,7 +15,7 @@
 			<h1>LOGIN</h1>
 		</header>
 		<content>
-			<form method="post" action="https://selab.hanyang.ac.kr/login/login.php">
+			<form method="post" action="http://localhost/login.php">
 
 				<input id="idform" class="textfield" type="text" name="id" placeholder= "Username"/>
 				<div class="login_icon" id="usericon"></div>
@@ -25,11 +24,9 @@
 				<div class="login_icon" id="passwdicon"></div>
 
 				<input id="submit_button" type="submit" value="login"/>
-				<input type="hidden" name="source" value="/index.php"> 
+				<input type="hidden" name="source" value="/index.php">
 			</form>
 		</content>
 	</div>
 </body>
-
-<!-- Mirrored from selab.hanyang.ac.kr/login/index.php?source=/index.php by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 01 Nov 2019 07:38:26 GMT -->
 </html>
