add background selection

--- a/selab/index.html
+++ b/selab/index.html
@@ -6,17 +6,10 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Software Engineering Lab - Home</title>
-	<!--[if IE]>
-	<script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
-
-	<!-- <link rel="stylesheet" href="common/styles/reset-1.6.1.css" type="text/css" /> -->
-	<!-- <link rel="stylesheet" href="common/styles/jquery-ui.css" type="text/css" /> -->
-	<!-- <link rel="stylesheet" href="../common/styles/font-awesome-4.0.3/css/font-awesome.min.css" type="text/css" /> -->
 	<link rel="stylesheet" href="common/styles/common.css" type="text/css" />
 	<link rel="shortcut icon" href="common/images/SelabFavicon.png" type="image/png">
 	<link rel="stylesheet" href="home/styles/home.css" type="text/css" />
-	<link rel="stylesheet" href="home/styles/theme3.css" type="text/css" />
+	<link rel="stylesheet" id = "backcss" href="home/styles/theme1.css" type="text/css" />
 
 	<script type="text/javascript" src="common/scripts/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="common/scripts/jquery-ui.js"></script>
@@ -25,13 +18,15 @@
 	<script type="text/javascript" src="home/scripts/home.js"></script>
 	<script type="text/javascript" src="home/scripts/unslider.js"></script>
 
+
 </head>
 
 <body>
 	<header role="banner">
-		<div class="container">
-			<nav role="navigation">
-				<div id="logo" class="pull-left"><a href="index.html"><img src="common/images/selab_logo_S.png" /></a></div>
+		<nav>
+			<div id="logo" class="pull-left">
+				<a href="index.html"><img src="common/images/selab_logo_S.png" /></a>
+			</div>
 				<!-- <ul id="menu" class="inline-list pull-left">
 					<li class="pull-left"><a href="notice/index.html" >NOTICE</a></li>
 					<li class="pull-left"><a href="members/index.html" >MEMBERS</a></li>
@@ -40,43 +35,29 @@
 					<li class="pull-left"><a href="courses/index.html" >COURSES</a></li>
 					<li class="pull-left"><a href="gallery/index.html" >GALLERY</a></li>
 				</ul> -->
-				<div id="setting" href"" class='pull-right'>
-					<input type="button" class="setting" value="SETTING" onclick="settingShow()" />
-					<div class="setting-tab">
-						<input type="button" value="close" onclick="settingClose()" />
-						<p>Navigation</p>
-						<input type="radio" name="nav" value="top" checked="checked" /> Top
-						<input type="radio" name="nav" value="left" /> Left
-						<input type="radio" name="nav" value="right" /> Right
-						<p>Font</p>
-						<select id="fontselect" name="selectFontFamily" onchange="fontupdate(1);">
-					  <option style="font-family:Serif" value="serif"> Serif </option><option style="font-family:Tahoma" value="Tahoma"> Tahoma </option>
-					  <option style="font-family:Arial" value="Arial"> Arial </option><option style="font-family:Monospace" value="Monospace">Monospace</option>
-					  <option style="font-family:Roboto" value="Roboto">Roboto</option><option style="font-family:Times New Roman" value="Times New Roman">Times New Roman</option>
-					  <option style="font-family:Garamond" value="Garamond">Garamond</option><option style="font-family:Comic Sans MS" value="Comic Sans MS">Comic Sans MS</option>
-					  <option style="font-family:Courier" value="Courier">Courier</option><option style="font-family:Impact" value="Impact">Impact</otpion></select>
-					  <p>Font Size</p>
-					  <select id="fontsizeSlect" name="selectfontsize" onchange="fontupdate(2);">
-					  <option>10pt</option><option>12pt</option><option>14pt</option><option>16pt</option><option>18pt</option>
-					  <option>20pt</option><option>22pt</option><option>24pt</option><option>26pt</option><option>28pt</option>
-					  <option>30pt</option></select>
-					  <p>Title Color</p>
-					  <input type="text" id="custom" />
-					  <p>Contents Color</p>
-					  <input type="text" id="custom1" />
-					</div>
-				</div>
-				<div role="login" class="pull-right">
-					<a href="login/index4e7d.html?source=/index.php">LOGIN</a>
-				</div>
-				<a id="contact" href="contact/index.html" class='pull-right'>CONTACT</a>
-			</nav>
-		</div>
+
+			<a id="setting" class="pull-right" href="javascript:settingview();"> <img src="https://img.icons8.com/ios/30/000000/settings.png"></a>
+
+			<div id="settingtab">
+				<p>Navigation</p>
+				<input type="radio" name="nav" value="top" checked="checked" /> Top
+				<input type="radio" name="nav" value="left" /> Left
+				<input type="radio" name="nav" value="right" /> Right
+				<div id="font"></div>
+				<div id="background"></div>
+			</div>
+				
+			<div role="login" class="pull-right">
+				<a href="login/index4e7d.html?source=/index.php">LOGIN</a>
+			</div>
+
+			<a id="contact" href="contact/index.html" class='pull-right'>CONTACT</a>	
+		</nav>
 	</header>
 
 	<main role="main">
 		<div class="container">
-			<!-- <div class="contents"> -->
+				<!-- <div class="contents"> -->
 				<!-- <div class="banner">
 					<ul>
 						<li id="img1"></li>
@@ -95,24 +76,40 @@
 						<li><a href="courses/cse326/2019/index.html">CSE326 Web Application Development</a></li>
 					</ul>
 				</div> -->
-      <div class="menu">
-				<div id = 'ind'><a href="index.html"><img src="common/images/selab_logo_S_2.png" /></a></div>
-        <a id='not' href="notice/index.html">NOTICE</a>
+			<div class="menu">
+				<div id = 'ind'>
+				<!-- 	<img class="imgslide" src="home/images/1.png">
+					<img class="imgslide" src="home/images/2.png">
+					<img class="imgslide" src="home/images/3.png"> -->
+					<a href="index.html"><img src="common/images/selab_logo_S_2.png" /></a>
+				</div>
+				<a id='not' href="notice/index.html">NOTICE</a>
 				<a id='mem' href="members/index.html">MEMBERS</a>
 				<a id='res' href="research/index.html" >RESEARCH</a>
-  			<a id='pub' href="publications/index.html" >PUBLICATIONS</a>
-  			<a id='cou' href="courses/index.html" >COURSES</a>
-  			<a id='gal' href="gallery/index.html" >GALLERY</a>
-      </div>
-			<!-- </div> -->
+				<a id='pub' href="publications/index.html" >PUBLICATIONS</a>
+				<a id='cou' href="courses/index.html" >COURSES</a>
+				<a id='gal' href="gallery/index.html" >GALLERY</a>
+			</div>
 		</div>
 	</main>
+	
+	<div class="menu">
+		<div><a href="index.html"><img src="common/images/selab_logo_S.png" /></a></div>
+		<a href="notice/index.html">NOTICE</a>
+		<a href="members/index.html">MEMBERS</a>
+		<a href="research/index.html" >RESEARCH</a>
+		<a href="publications/index.html" >PUBLICATIONS</a>
+		<a href="courses/index.html" >COURSES</a>
+		<a href="gallery/index.html" >GALLERY</a>
+	</div>
+</main>
 
-	<footer role="contentinfo">
-		<div class="container">
-			<p>COPYRIGHT 2014 SELAB, ALL RIGHTS RESERVED. COMPUTER SCIENECE AND ENGINEERING, HANYANG UNIV. LOCATION: ENGINEERING BUILDING #3, ROOM 421. T +82-31-400-4754</p>
-		</div>
-	</footer>
+
+<footer role="contentinfo">
+	<div class="container">
+		<p>COPYRIGHT 2014 SELAB, ALL RIGHTS RESERVED. COMPUTER SCIENECE AND ENGINEERING, HANYANG UNIV. LOCATION: ENGINEERING BUILDING #3, ROOM 421. T +82-31-400-4754</p>
+	</div>
+</footer>
 </body>
 
 <!-- Mirrored from selab.hanyang.ac.kr/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 01 Nov 2019 07:38:16 GMT -->
