--- a/selab/contact/index.html
+++ b/selab/contact/index.html
@@ -34,6 +34,15 @@
 						<li class="pull-left"><a href="../courses/index.html" >COURSES</a></li>
 						<li class="pull-left"><a href="../gallery/index.html" >GALLERY</a></li>
 					</ul>
+					<a id="setting" class="pull-right" href="javascript:settingview();"> <img src="https://img.icons8.com/ios/30/000000/settings.png"></a>
+					<div id="settingtab">
+						<p>Navigation</p>
+						<input type="radio" name="nav" value="top" checked="checked" /> Top
+						<input type="radio" name="nav" value="left" /> Left
+						<input type="radio" name="nav" value="right" /> Right
+						<div id="font"></div>
+						<div id="background"></div>
+					</div>
 					<div role="login" class="pull-right">
 						<a href="../login/index4e7d.html?source=/index.php">LOGIN</a>
 					</div>
@@ -44,6 +53,27 @@
 
 		<main role="main" style="height: 690px;">
 			<div class="container">
+				<div id="nav">
+					<div id="logo"><a href="../index.html"><img src="../common/images/selab_logo_S.png" /></a></div>
+  				<div class="nav-list">
+  					<a href="../notice/index.html" >NOTICE</a>
+  				</div>
+  				<div class="nav-list">
+  					<a href="../members/index.html" >MEMBERS</a>
+  				</div>
+  				<div class="nav-list">
+  					<a href="../research/index.html" >RESEARCH</a>
+  				</div>
+  				<div class="nav-list">
+  					<a href="../publications/index.html" >PUBLICATIONS</a>
+  				</div>
+  				<div class="nav-list">
+  					<a href="../courses/index.html" >COURSES</a>
+  				</div>
+  				<div class="nav-list">
+  					<a href="../gallery/index.html" >GALLERY</a>
+  				</div>
+				</div>
 				<div class="contents">
 					<h1>CONTACT</h1>
 					<div class="wrap">
