--- a/selab/members/index.html
+++ b/selab/members/index.html
@@ -18,7 +18,7 @@
 		<script type="text/javascript" src="../common/scripts/jquery-1.11.0.min.js"></script>
 		<script type="text/javascript" src="../common/scripts/jquery-ui.js"></script>
 		<script type="text/javascript" src="../common/scripts/buffered-keyup.js"></script>
-		<script type="text/javascript" src="../common/scripts/common.js"></script>
+		<script type="text/javascript" src="../common/scripts/common5.js"></script>
 
 	</head>
 
@@ -26,15 +26,7 @@
 		<header role="banner">
 			<div class="container">
 				<nav role="navigation">
-					<div id="logo" class="pull-left"><a href="../index.html"><img src="../common/images/selab_logo_S.png" /></a></div>
-					<ul id="menu" class="inline-list pull-left">
-						<li class="pull-left"><a href="../notice/index.html" >NOTICE</a></li>
-						<li class="pull-left"><a href="../members/index.html" class='selected'>MEMBERS</a></li>
-						<li class="pull-left"><a href="../research/index.html" >RESEARCH</a></li>
-						<li class="pull-left"><a href="../publications/index.html" >PUBLICATIONS</a></li>
-						<li class="pull-left"><a href="../courses/index.html" >COURSES</a></li>
-						<li class="pull-left"><a href="../gallery/index.html" >GALLERY</a></li>
-					</ul>
+					<div id="logo"><a href="../index.html"><img src="../common/images/selab_logo_S.png" /></a></div>
 					<a id="setting" class="pull-right" href="javascript:settingview();"> <img src="https://img.icons8.com/ios/30/000000/settings.png"></a>
 					<div id="settingtab">
 						<p>Navigation</p>
@@ -49,6 +41,16 @@
 					</div>
 					<a id="contact" href="../contact/index.html" class='pull-right'>CONTACT</a>
 				</nav>
+				<div id="menu">
+					<ul class="inline-list pull-left">
+						<li><a href="../notice/index.html" >NOTICE</a></li>
+						<li><a href="../members/index.html" >MEMBERS</a></li>
+						<li><a href="../research/index.html" >RESEARCH</a></li>
+						<li><a href="../publications/index.html" >PUBLICATIONS</a></li>
+						<li><a href="../courses/index.html" >COURSES</a></li>
+						<li><a href="../gallery/index.html" >GALLERY</a></li>
+					</ul>
+				</div>
 			</div>
 		</header>
 
@@ -56,24 +58,24 @@
 			<div class="container">
 				<div id="nav">
 					<div id="logo"><a href="../index.html"><img src="../common/images/selab_logo_S.png" /></a></div>
-  				<div class="nav-list">
-  					<a href="../notice/index.html" >NOTICE</a>
-  				</div>
-  				<div class="nav-list">
-  					<a href="../members/index.html" >MEMBERS</a>
-  				</div>
-  				<div class="nav-list">
-  					<a href="../research/index.html" >RESEARCH</a>
-  				</div>
-  				<div class="nav-list">
-  					<a href="../publications/index.html" >PUBLICATIONS</a>
-  				</div>
-  				<div class="nav-list">
-  					<a href="../courses/index.html" >COURSES</a>
-  				</div>
-  				<div class="nav-list">
-  					<a href="../gallery/index.html" >GALLERY</a>
-  				</div>
+					<div class="nav-list">
+						<a href="../notice/index.html" >NOTICE</a>
+					</div>
+					<div class="nav-list">
+						<a href="../members/index.html" >MEMBERS</a>
+					</div>
+					<div class="nav-list">
+						<a href="../research/index.html" >RESEARCH</a>
+					</div>
+					<div class="nav-list">
+						<a href="../publications/index.html" >PUBLICATIONS</a>
+					</div>
+					<div class="nav-list">
+						<a href="../courses/index.html" >COURSES</a>
+					</div>
+					<div class="nav-list">
+						<a href="../gallery/index.html" >GALLERY</a>
+					</div>
 				</div>
 				<div class="contents">
 					<div id="main">
