--- a/selab/publications/index.html
+++ b/selab/publications/index.html
@@ -26,15 +26,7 @@
 		<header role="banner">
 			<div class="container">
 				<nav role="navigation">
-					<div id="logo" class="pull-left"><a href="../index.html"><img src="../common/images/selab_logo_S.png" /></a></div>
-					<ul id="menu" class="inline-list pull-left">
-						<li class="pull-left"><a href="../notice/index.html" >NOTICE</a></li>
-						<li class="pull-left"><a href="../members/index.html" >MEMBERS</a></li>
-						<li class="pull-left"><a href="../research/index.html" >RESEARCH</a></li>
-						<li class="pull-left"><a href="../publications/index.html" class='selected'>PUBLICATIONS</a></li>
-						<li class="pull-left"><a href="../courses/index.html" >COURSES</a></li>
-						<li class="pull-left"><a href="../gallery/index.html" >GALLERY</a></li>
-					</ul>
+					<div id="logo"><a href="../index.html"><img src="../common/images/selab_logo_S.png" /></a></div>
 					<a id="setting" class="pull-right" href="javascript:settingview();"> <img src="https://img.icons8.com/ios/30/000000/settings.png"></a>
 					<div id="settingtab">
 						<p>Navigation</p>
@@ -45,10 +37,20 @@
 						<div id="background"></div>
 					</div>
 					<div role="login" class="pull-right">
-						<a href="../login/indexc5a4.html?source=/notice/index.php">LOGIN</a>
+						<a href="../login/index4e7d.html?source=/index.php">LOGIN</a>
 					</div>
 					<a id="contact" href="../contact/index.html" class='pull-right'>CONTACT</a>
 				</nav>
+				<div id="menu">
+					<ul class="inline-list pull-left">
+						<li><a href="../notice/index.html" >NOTICE</a></li>
+						<li><a href="../members/index.html" >MEMBERS</a></li>
+						<li><a href="../research/index.html" >RESEARCH</a></li>
+						<li><a href="../publications/index.html" >PUBLICATIONS</a></li>
+						<li><a href="../courses/index.html" >COURSES</a></li>
+						<li><a href="../gallery/index.html" >GALLERY</a></li>
+					</ul>
+				</div>
 			</div>
 		</header>
 
