--- a/selab/index.html
+++ b/selab/index.html
@@ -25,10 +25,10 @@
 	<header role="banner">
 		<nav>
 			<div id="logo" class="pull-left">
-				<a href="index.html"><img src="common/images/selab_logo_S.png" /></a>
+				<a href="index.html"><img src="common/images/selab_logo_S.png" alt="logo"/></a>
 			</div>
-      
-			<a id="setting" class="pull-right" href="javascript:settingview();"> <img src="https://img.icons8.com/ios/30/000000/settings.png"></a>
+
+			<a id="setting" class="pull-right" href="javascript:settingview();"> <img src="common/images/color_lens-24px.svg" alt="customize"> </a>
 
 			<div id="settingtab">
 				<p>Navigation</p>
@@ -40,10 +40,10 @@
 			</div>
 
 			<div role="login" class="pull-right">
-				<a href="login/index4e7d.html?source=/index.php">LOGIN</a>
+				<a href="login/index4e7d.html?source=/index.php"> <img src="common/images/vpn_key-24px.svg" alt="login"> </a>
 			</div>
 
-			<a id="contact" href="contact/index.html" class='pull-right'>CONTACT</a>
+			<a id="contact" href="contact/index.html" class='pull-right'> <img src="common/images/phone-24px.svg" alt="contact"> </a>
 		</nav>
 	</header>
 
