--- a/selab/gallery/index.html
+++ b/selab/gallery/index.html
@@ -26,9 +26,13 @@
 	<body data-gr-c-s-loaded="true" style="">
 		<header role="banner">
 			<div class="container">
-				<nav role="navigation">
-					<div id="logo"><a href="../index.html"><img src="../common/images/selab_logo_S.png" /></a></div>
-					<a id="setting" class="pull-right" href="javascript:settingview();"> <img src="https://img.icons8.com/ios/30/000000/settings.png"></a>
+				<nav>
+					<div id="logo" class="pull-left">
+						<a href="../index.html"><img src="../common/images/selab_logo_S.png" alt="logo"/></a>
+					</div>
+
+					<a id="setting" class="pull-right" href="javascript:settingview();"> <img src="../common/images/color_lens-24px.svg" alt="customize"> </a>
+
 					<div id="settingtab">
 						<p>Navigation</p>
 						<input type="radio" name="nav" value="top" checked="checked" /> Top
@@ -37,10 +41,12 @@
 						<div id="font"></div>
 						<div id="background"></div>
 					</div>
+
 					<div role="login" class="pull-right">
-						<a href="../login/index4e7d.html?source=/index.php">LOGIN</a>
+						<a href="../login/index4e7d.html?source=/index.php"> <img src="../common/images/vpn_key-24px.svg" alt="login"> </a>
 					</div>
-					<a id="contact" href="../contact/index.html" class='pull-right'>CONTACT</a>
+
+					<a id="contact" href="../contact/index.html" class='pull-right'> <img src="../common/images/phone-24px.svg" alt="contact"> </a>
 				</nav>
 				<div id="menu">
 					<ul class="inline-list pull-left">
