--- a/selab/index.html
+++ b/selab/index.html
@@ -6,6 +6,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Software Engineering Lab - Home</title>
+	<link rel="stylesheet" href="common/styles/reset-1.6.1.css" type="text/css" />
 	<link rel="stylesheet" href="common/styles/common.css" type="text/css" />
 	<link rel="shortcut icon" href="common/images/SelabFavicon.png" type="image/png">
 	<link rel="stylesheet" href="home/styles/home.css" type="text/css" />
