--- a/selab/research/index.html
+++ b/selab/research/index.html
@@ -20,30 +20,24 @@
 		<script type="text/javascript" src="script/research.js"></script>
 
 	</head>
-
-
-
 	<!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
 
 	<!-- Mirrored from selab.hanyang.ac.kr/research/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 01 Nov 2019 07:38:25 GMT -->
 	<body>
 		<header role="banner">
-			<div class="container">
-				<nav role="navigation">
-					<div id="logo"><a href="../index.html"><img src="../common/images/selab_logo_S.png" /></a></div>
-					<a id="setting" class="pull-right" href="javascript:settingview();"> <img src="https://img.icons8.com/ios/30/000000/settings.png"></a>
-					<div id="settingtab">
-						<p>Navigation</p>
-						<input type="radio" name="nav" value="top" checked="checked" /> Top
-						<input type="radio" name="nav" value="left" /> Left
-						<input type="radio" name="nav" value="right" /> Right
-						<div id="font"></div>
-						<div id="background"></div>
+			<div class="container navigation">
+				<nav>
+					<div id="logo" class="pull-left">
+						<a href="../index.html"><img src="../common/images/selab_logo_S.png" alt="logo"/></a>
 					</div>
+
+					<a id="setting" class="pull-right" href="javascript:settingview();"> <img src="../common/images/color_lens-24px.svg" alt="customize"> </a>
+
 					<div role="login" class="pull-right">
-						<a href="../login/index4e7d.html?source=/index.php">LOGIN</a>
+						<a href="../login/index4e7d.html?source=/index.php"> <img src="../common/images/vpn_key-24px.svg" alt="login"> </a>
 					</div>
-					<a id="contact" href="../contact/index.html" class='pull-right'>CONTACT</a>
+
+					<a id="contact" href="../contact/index.html" class='pull-right'> <img src="../common/images/phone-24px.svg" alt="contact"> </a>
 				</nav>
 				<div id="menu">
 					<ul class="inline-list pull-left">
@@ -57,8 +51,17 @@
 				</div>
 			</div>
 		</header>
-		<main role="main" style="height: 4874px;">
-			<div class="container">
+		<main role="main">
+			<div id="settingtab">
+				<p>Navigation</p>
+				<input type="radio" name="nav" value="top" checked="checked" /> Top
+				<input type="radio" name="nav" value="left" /> Left
+				<input type="radio" name="nav" value="right" /> Right
+				<div id="font"></div>
+				<div id="background"></div>
+			</div>
+			<div class="main-container">
+
 				<div id="nav">
 					<div id="logo"><a href="../index.html"><img src="../common/images/selab_logo_S.png" /></a></div>
   				<div class="nav-list">
@@ -79,6 +82,15 @@
   				<div class="nav-list">
   					<a href="../gallery/index.html" >GALLERY</a>
   				</div>
+					<div class="nav-list-bottom">
+						<a id="setting" href="javascript:settingview();"> <img src="../common/images/color_lens-24px.svg" alt="customize"> </a>
+
+						<div role="login">
+							<a href="../login/index4e7d.html?source=/index.php"> <img src="../common/images/vpn_key-24px.svg" alt="login"> </a>
+						</div>
+
+						<a id="contact" href="../contact/index.html"> <img src="../common/images/phone-24px.svg" alt="contact"> </a>
+					</div>
 				</div>
 				<div class="contents">
 					<h1>RESEARCH</h1>
